# ChangeLog for app-text/docx2txt
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/docx2txt/ChangeLog,v 1.5 2014/04/11 01:55:23 radhermit Exp $

*docx2txt-1.3 (11 Apr 2014)

  11 Apr 2014; Tim Harder <radhermit@gentoo.org> +docx2txt-1.3.ebuild:
  Version bump (bug #507110).

  06 Mar 2012; Tim Harder <radhermit@gentoo.org> -docx2txt-1.0.ebuild,
  -files/docx2txt-1.0-paragraph-newline.patch, -docx2txt-1.1.ebuild:
  Remove old.

*docx2txt-1.2 (15 Jan 2012)

  15 Jan 2012; Tim Harder <radhermit@gentoo.org> +docx2txt-1.2.ebuild:
  Version bump.

*docx2txt-1.1 (12 Dec 2011)

  12 Dec 2011; Tim Harder <radhermit@gentoo.org> +docx2txt-1.1.ebuild,
  +files/docx2txt-1.1-paragraph-newline.patch:
  Version bump.

*docx2txt-1.0 (06 Feb 2011)

  06 Feb 2011; Tim Harder <radhermit@gentoo.org> +docx2txt-1.0.ebuild,
  +files/docx2txt-1.0-paragraph-newline.patch, +metadata.xml:
  Initial import.
