@@ -4,18 +4,20 @@ Hash: SHA256
 AUX docx2txt-1.1-paragraph-newline.patch 220 SHA256 b48b287c296dd1ad66a8ecbf76ee9507773864ce63a7515804d2a9b94a59f605 SHA512 07d8686e1bd1f5ad1b18a5a3559667243dd9e580dff52711090843d5814736a371c382c2ad12d2dd01bbd827acc9a6f420d34f3ff4d02f9fb5864c07e86ec39f WHIRLPOOL dc934195322ed1b8d4d93e9ab8552a8ab506a35a53b6f8fc8fb948e0c0c25514b694ed16883923196a907eb7271b6386418d1ce38d2e932109edfd50573d6ffd
 DIST docx2txt-1.2.tgz 28483 SHA256 33649d1e8c4f86df897d478376cf76bd9f2aed27a952aaa96c615bce976488cf SHA512 ba5884c4d85e23aad26f74727b40e2d9d43cdf2e63f270486cbbfed5ef431f44f8f40a2583d3185fa3c16a97d9cd78e84feaf8f1f7be78ae9e1662e04a2013d6 WHIRLPOOL 8bf767eee6ec4768fddefc0c480bf6f5c41f21c7e5128771ff465de2884654ef462c6b226f4c01f0ff244c8f73f5edade184240d3854f942c2102b53c00a3cdb
 DIST docx2txt-1.3.tgz 29953 SHA256 ece1689e204c961a962bb339b87ecd9fb009cdc01a87a4d658819a3313a90ece SHA512 9ad74558074cd3e72b0d2e6541dc56d7b74d59d6313fb0cde1b2f02a0e1cdb05d705a650c0dde02e5b3a683f8ee6ab2fb5b865301f4213cd3e8770cd9e4d0d97 WHIRLPOOL 3580c0caa69f5d35963daf17f637452e02d748eb7eb02579049f087d35a202c5f611bbee9dc8cbd53a98776f77870379f83316c1840ab2105cd98600009abc4e
+DIST docx2txt-1.4.tgz 31302 SHA256 b297752910a404c1435e703d5aedb4571222bd759fa316c86ad8c8bbe58c6d1b SHA512 5e59cd4065f409c20e17b29d3935a2637147392e86a325b28b78748d3b3867ce91f14f3349621b3c95b2ce6a8e38e33cf0816d1f9dccbebfdde9ba29fbd7f5b3 WHIRLPOOL 7f9f53c4aaa45a60ffa4a4e19b727e0898c9d39dabf3685317ee664a8723ed75fe8da4711ce06b8b06132ce304e29613fef331b53d0e54551e79fb1ea67fdf76
 EBUILD docx2txt-1.2.ebuild 690 SHA256 fa0fbb47322078c84c703e4cff5b38eeba27a0a4c4ba699284383c1a2fa2bc71 SHA512 d9c96fc33a0f3b4506d1dcefa728cc1a6f5a2d855851136916b21a642451d33090ebaa87f6df8acc45ebe9f0ad88fa5dabe682e52e5717252dfb79b621ae909e WHIRLPOOL ef4a724e8ccb72dfcfd1a7bbaee31776a8fe8e91a0472817d157c5abd7c187bf46895257054a2dc9b672d2e025fe850fd74dc76073d9c4e37bea5e97590081be
 EBUILD docx2txt-1.3.ebuild 682 SHA256 7c1cc8248bf8cd1969113c6ad356b6634de38c887d226d848ad1d06a0d390463 SHA512 04af5e638d09bf4e9d4a9c7f5ec0130c3d578bb9699d1295a6b1902c19553b16efca180651ba557dc87a6c8c040476de4dc9a03a3d1c3c761a2dda08936e43a3 WHIRLPOOL 18e0a72e0d039371fbf396c7bf70bfed75c9d11a0e52a54940df4db12c36de90d3f2175c1f383f3a6a4771ba59bee6b7524cb86d59abe4eae866b36a4a1cc68d
-MISC ChangeLog 958 SHA256 d36b9460a1e636646308d4bc0fd974c37cac0e3dae2e65f976fd7ecf26fb0984 SHA512 b6ab63c49170917d589e20c261144a7d6a67edb22f0a9974033ed5790acfe1ccc1a290b4fb36efb596a17f4ed792dc21783ce004d6c41f14a6200246d84799c3 WHIRLPOOL b64e7a9ff43d0ab1a3c9c3810747deb23eaf9de9549991de622cd2850a47d803c93c6f26df6f0354573d1c6c7e8a1f86792dc93fa9b7f23301404322205050fa
+EBUILD docx2txt-1.4.ebuild 682 SHA256 b956b1611191ec1de60b7fb2fa66270fc2af092c65416930f20f7fdfd2f8ac50 SHA512 bb96fc20b0b895d58242d4bbc5e8f6b0a47cd59c7d694eb981e329be911e58c9226263e0732123e23f3b0186dbdcdd4654152c37ed1395a783b9b910af310451 WHIRLPOOL 5fde835410d211754d0ec1b5d3f9bfa57ed0cb1075da9521645a8ae3dff3bc5bec8e62ac8a64983ada8c7d1ecde4dc92e3e0153790794edc49071f06fcc5b767
+MISC ChangeLog 1075 SHA256 adae7b5bd658150a0707b982b6e13120adf088784e729c5df1e819db5262894e SHA512 b99c75fe9af2ca7f56ff7cb9912cc582c9b85123079f962560ab0151daf817ef6ca5fd3a7525263acc7b011dc4fd77f72f1fb75b00e133dc338c7526822a4f4b WHIRLPOOL f4ee4a01cfe520021cd497a6ba4d7f4a706b07e3afeb4a5263146d026631b75394463a49194aaaf92e073dc4314aa192a1b328d26fc2b2eb4828bb7942478a21
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTR0uMAAoJEEqz6FtPBkyjE2QIAKFOH0YMh/HSSkj8boaxtmXN
-JIdHFvLBS85RPzGTJJ4Vf6TnbsGAoXj34Q/JbcFoklj5L7RI6cNpjr2YAJg016e9
-O83P9fNhWydLAQPVpK/KDyMkdU7oOzes2efHhiW/YuTt5qTtoAm2QSHf8+vuWqlC
-yHlPNBoRDdbw/NrOtsMiiF3svqeVKfxFc2SDf5M/38G65yRqqETAULO5RqkohfLK
-V1Fre/arIfsERHv8o24HS3Eub6xYPvLJ24SAhyfzLd2bAh/OALEOKYu49jo09mNK
-+hVYawL0re4duSTMDyTw7qoflo3tbpNoztr9pax5H1uLX6aLgg4QDM5fmqmOlqs=
-=oIpd
+iQEcBAEBCAAGBQJTeIAkAAoJEEqz6FtPBkyjKfgH/jra0TuXGjqwbLYny5nDCraG
+cgHGWzpyZo2rVbB+Iicgbg3NgBfLolMmfnUt5TMfjZbtdXATVSHgWTkJADNvY4G2
+gq5h1cxbzfRW6f0Hj0DHKaehAnelgrWawBHkDUBUxlUvxhxOtFDvG6u8q9Enu+bn
+GgnYDpkuK6M+O7jeTxZtK325c9ptoakmH+2IJbGlpgmp3quyDnJD95zMsqOvPDQp
+tg8Zzs+i0W79vjmVtPlYHGg6I8nEggobKeQKWvEPK3mbz1buZJbNet0s/o8ZrMLL
+vMXdlnY9OPk14unjEiqvJZj0sRaV530Af433u8z1B6GDH884fa5o7jE5buc0lxY=
+=cogg
 -----END PGP SIGNATURE-----
