@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile install prepare
+DESCRIPTION=Convert MS Office docx files to plain text
+EAPI=5
+HOMEPAGE=http://docx2txt.sourceforge.net/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=app-arch/unzip dev-lang/perl
+SLOT=0
+SRC_URI=mirror://sourceforge/docx2txt/docx2txt-1.4.tgz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=605d5d11846e54ba33b33c75e8a08f4c
