@@ -1,6 +1,11 @@
 # ChangeLog for app-text/docx2txt
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/docx2txt/ChangeLog,v 1.5 2014/04/11 01:55:23 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/docx2txt/ChangeLog,v 1.6 2014/05/18 09:40:49 radhermit Exp $
+
+*docx2txt-1.4 (18 May 2014)
+
+  18 May 2014; Tim Harder <radhermit@gentoo.org> +docx2txt-1.4.ebuild:
+  Version bump.
 
 *docx2txt-1.3 (11 Apr 2014)
 
